[package]
name = "plotting"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
panic = 'abort'

[profile.dev]
panic = 'abort'

[dependencies]
env_logger = "0"
futures = "0"
futures-util = "0"
http-body-util = "0"
hyper = {version = "1", features = ["http1", "http2", "server"]}
hyper-tungstenite = "0"
hyper-util = "0"
log = "0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["rt", "macros", "rt-multi-thread"]}
